2008-04-13  Jürg Billeter  <j@bitron.ch>

	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala: remove
	  obsolete non-null type syntax

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.2 release

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* tests/Makefile.am: dist all source files

2008-02-26  Jürg Billeter  <j@bitron.ch>

	* Makefile.am, Makefile.decl, configure.ac, gee/Makefile.am,
	  tests/Makefile.am, tests/testarraylist.vala,
	  tests/testhashmap.vala, tests/testhashset.vala: add unit tests

2008-02-26  Jürg Billeter  <j@bitron.ch>

	* gee/hashset.vala: fix iterator, patch by Ali Sabil

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala, gee/readonlycollection.vala, gee/readonlylist.vala,
	  gee/readonlymap.vala, gee/readonlyset.vala: remove unreachable
	  return statements

2008-01-22  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala, gee/hashset.vala: fix invalid variable initializers

2008-01-22  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-01-22  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.1 release

2008-01-22  Jürg Billeter  <j@bitron.ch>

	Update svn:ignore property.

2008-01-22  Jürg Billeter  <j@bitron.ch>

	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala,
	  gee/iterable.vala, gee/readonlycollection.vala, gee/readonlylist.vala,
	  gee/readonlyset.vala: add get_element_type method to Gee.Iterable

2008-01-22  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala, gee/hashset.vala: remove unneeded type casts

	* gee/Makefile.am: don't use filter function in makefiles as it's a
	  GNU make extension

2007-12-15  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala, gee/hashset.vala: update for vala trunk

2007-11-03  Jürg Billeter  <j@bitron.ch>

	* gee/Makefile.am: update for vala 0.1.4

2007-09-07  Jürg Billeter  <j@bitron.ch>
